assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* body */
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    font-family: "Abeezee", sans-serif;
    color: #12100E;
}

/* header */
header {
    background-color: #885A5A;
    font-family: "Sansita", system-ui;
    position: relative;
    display: flex;
    flex-wrap: wrap;
}

h1 {
    margin-left: 20px;
    width: 100%;
    margin-top: 20px;

}

h1~h2 {
    font-size: medium;
    margin: 0 0 50px 20px;
    width: 100%;
}

h3 {
    padding: 20px 0 10px;
    font-size: 130%;
}

h4 {
    padding: 10px 0;
    font-size: large;
}

p a {
    color: #12100E;
}


#cover-home {
    background: url("../images/climbing-cover-cropped.webp") center center/cover;
    width: 100%;
    height: 130px;
    background-position: 0 20%;
}

#navbar {
    position: absolute;
    width: 100%;
    height: 25px;
    align-self: flex-end;
    text-align: end;
    background-color: rgba(18, 16, 14, 0.8);
}

#navbar a {
    color: #edbd79;
    text-decoration: none;
    padding: 0 20px;

}

/* popup get help window */
#open-help-window {
    position: fixed;
    z-index: 500;
    background-color: rgba(18, 16, 14, 0.5);
    height: 100%;
    width: 100%;
    visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

#help-window {
    background-color: rgba(18, 16, 14, 0.8);
    padding: 10px 30px;
    width: min-content;
    height: fit-content;
    color: #EEE5E9;
    text-align: center;
    line-height: 25px;
    position: absolute;
    box-shadow: 2px 2px 2px #000000;
}

#help-window input {
    width: 100%;
}

input[type="submit"] {
    background-color: #edbd79;
    padding: 5px;
    margin: 10px 0;
    border-radius: 5px;
    border-color: #edbd79;
}

/* closing "button" */
#help-window a {
    float: right;
    color: #edbd79;
}

#open-help-window:target {
    visibility: visible;
}

#success-message {
    position: fixed;
    z-index: 500;
    background-color: rgba(18, 16, 14, 0.5);
    height: 100%;
    width: 100%;
    visibility: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

#success-message:target {
    visibility: visible;
}

#got-message {
    background-color: rgba(18, 16, 14, 0.8);
    padding: 10px 25px;
    width: max-content;
    height: fit-content;
    color: #EEE5E9;
    text-align: center;
    line-height: 30px;
    font-size: large;
    position: absolute;
    box-shadow: 2px 2px 2px #000000;
}

#got-message a {
    color: #edbd79;
    text-decoration: none;
    float: right;
}

/* main */
main {
    flex: 1 0 auto;
    background-color: #faf0df;
    display: flex;
    flex-direction: column;
    position: relative;
}

.main-content {
    margin-right: 20px;
    padding: 15px;
    text-align: justify;
    line-height: 20px;
}

main h2 {
    padding: 10px 0;
}

#back-to-top {
    text-decoration: none;
    color: #12100E;
    right: 5px;
    position: fixed;
    text-align: center;
    bottom: 46px;
}

#about-us {
    display: flex;
    flex-wrap: wrap;
}

.main-content p {
    text-indent: 15px;
}

#group-pic {
    height: 100%;
    width: 100%;
    border-radius: 20px;
    margin-bottom: 10px;
}

/* advice section */

#cover-advice {
    background: url("../images/hanging.webp") center center/cover;
    width: 100%;
    height: 130px;
}

/* first picture in advice section */
#shoe-feat {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    display: block;
    margin: 15px auto;
}
 /* other images */
.shoes-image {
    width: 100%;
    height: 100%;
    padding: 10px;
    border-radius: 20px;
}

/* only desktop images */
.img-2 {
    display: none;
}

#shape {
    padding-bottom: 0;
}

#questions {
    list-style-type: none;
    padding: 10px;
}

#conclusion {
    margin-bottom: 20px;
}

/* footer */
footer {
    background-color: #12100E;
    display: flex;
    font-size: 30px;
    justify-content: space-evenly;
    padding: 5px 0;
}

#footer a {
    color: #EEE5E9;
}

/* from tablet size up */
@media screen and (min-width:768px) {

    /* header */
    #cover-home,
    #cover-advice {
        height: 350px;
    }

    h1 {
        font-size: 500%;
        margin-left: 20px;
        width: 100%;
        margin-top: 100px;
    }

    h1~h2 {
        font-size: xx-large;
        margin: 0 0 100px 20px;
        width: 100%;
    }

    #navbar {
        height: 40px;
    }

    #navbar a {
        font-size: 200%;
    }

    /* get help window */
    #help-window,
    #got-message {
        font-size: 25px;
        padding: 3% 8%;
    }

    #help-window input {
        height: 35px;
        font-size: 80%;
    }

    input,
    textarea {
        margin: 10px 0;
    }

    textarea {
        width: 350px;
        font-size: 80%;
    }

    #got-message p {
        padding: 10px 0;
    }

    /* about us content */
    #about-us {
        display: block;
    }

    #first-paragraph {
        width: 100%;
        margin-top: 20px;
    }

    #group-pic {
        float: left;
        height: 50%;
        width: 50%;
        padding: 20px;
        margin: 0;
        border-radius: 50px;
    }

    /* advice section */

    h4 {
        padding: 10px 12px;
    }

    .features {
        display: block;
    }

    #shoe-feat {
        height: 70%;
        width: 80%;

    }

    #neutral,
    #aggressive {
        float: left;
    }

    #moderate {
        float: right;
    }

    #moderate-heading {
        text-align: end;
    }

    .shoes-image {
        height: 350px;
        width: 350px;
    }

    .shapes p {
        padding: 15px;
        margin: 12% 0;
    }

    .shapes h4 {
        padding: 0 12px;
    }

    .features {
        margin: 0 auto;
    }
}

/* laptop screen size */
@media screen and (min-width:992px) {

    #navbar {
        display: flex;
        justify-content: flex-end;
    }

    #navbar a:hover {
        color: #885A5A;
        transform: scale(1.1);
        text-shadow: 1px 1px 2px #12100E;
    }

    h4 {

    }

    #moderate-heading {
        text-align: start;
    }

    #moderate {
        float: inline-start;
    }

    .img-2 {
        display: block;
    }

    .shapes img {
        margin: 20px 15%;
    }

    .shapes p {
        margin: 20px 0;
    }

}

